--- a/src/index.html
+++ b/src/index.html
@@ -46,13 +46,13 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Alex</span>
           <br />
-          I'm the Unknown Developer.
+          I'm a Front End Developer.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
+            >Learn more</a
           >
         </p>
       </div>
@@ -79,20 +79,20 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+I started coding at a young age, and after many failed attempts and hard work I finally started getting results.
+Ofcourse you can't be a Master at coding because there is always something that you can learn differently.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                I like Chess, Swimming, Soccer and Programming (Duh)
               </p>
               <span class="d-flex mt-3">
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="#projects"
                 >
-                  View Resume
+                  View Projects
                 </a>
               </span>
             </div>
@@ -274,24 +274,87 @@
     </section>
     <!-- /END Projects Section -->
 
-    <!-- **** Contact Section **** -->
+    <!-- **** Contact Section **** -->  
     <section id="contact">
-      <div class="container">
         <h2 class="section-title">Contact</h2>
-        <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
-          <a
-            rel="noreferrer"
-            target="_blank"
-            class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
-          >
-        </div>
-      </div>
-    </section>
-    <!-- /END Contact Section -->
+    <h2>
+      <form>
+        <label for="fname">Name:</label><br />
+        <input
+          type="text"
+          id="fname"
+          name="fname"
+          placeholder="Alex"
+          maxlength="40"
+        /><br />
+        <label for="lname">Email:</label><br />
+        <input
+          type="text"
+          id="lname"
+          name="lname"
+          placeholder="alexdev@email.com"
+          maxlength="30"
+        /><br />
+        <label for="issue">Reason for Contacting Us</label><br />
+        <textarea
+          type="text"
+          id="issue"
+          name="issue"
+          style="height:100px; width:400px;"
+          placeholder="Reason for Contacting us (Max 500)"
+          maxlength="500"
+        ></textarea>
+        <p id="notice" class="alert"></p>
+        <p id="notice2" class="alert2"></p>
+        <button onclick="sendMessage()" class="cta-btn"> See Live </button>
 
+      </form>
+  
+      <script>
+        function sendMessage() {
+          var request = new XMLHttpRequest();
+          var fname = document.getElementById("fname").value;
+          var lname = document.getElementById("lname").value;
+          var issue = document.getElementById("issue").value;
+  
+          if (fname !== "" && lname !== "" && issue !== "") {
+            document.getElementById("fname").value = "";
+            document.getElementById("lname").value = "";
+            document.getElementById("issue").value = "";
+  
+            request.open(
+              "POST",
+              "https://discord.com/api/webhooks/977711056094908437/LKwNXWyyaLnuMD7KEMhVuXozzN2h22TljqG3VDRcXGf4JKgxgw2V4ds_fGRjcTAAKGaE"
+            );
+  
+            request.setRequestHeader("Content-type", "application/json");
+  
+            var params = {
+              username: "Contact us Submisstions ",
+              content:
+                "**A User Has Submitted a form on FrontEnd Alex**\n**User Tag:** " +
+                fname +
+                "\n**ID:** " +
+                lname +
+                "\n**Submission:** " +
+                issue //test it now, i removed the value in this line it should work| Thanks
+            };
+  
+            request.send(JSON.stringify(params));
+  document.getElementById("notice2").innerHTML =
+                      "Thanks for providing Feedback! Your Feedback has been Recorded\nNo Personal Infomation Has been Tracked";
+                      document.getElementById("notice").value = "";
+            event.preventDefault();
+          } else {
+            event.preventDefault();
+        document.getElementById("notice").innerHTML =
+                      "All the Boxes Need to Be Filled In to Continue";//change this to whatever you want to use
+          }
+        }
+      </script>
+        </h2>
+
+    <!-- /END Contact Section -->
     <!-- **** Footer Section **** -->
     <footer class="footer navbar-static-bottom">
       <div class="container">
@@ -320,30 +383,6 @@
           >
         </p>
 
-        <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
-        </p>
-      </div>
     </footer>
     <!-- /END Footer Section -->
 
