--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,4 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobidev/simplefolio/
-  Readme: https://github.com/cobidev/simplefolio/README.md
-  -
-  For business & inquires, contact me -> jacobojavier98@gmail.com
--->
+
 <!DOCTYPE html>
 <html lang="en" class="sr">
   <head>
@@ -17,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
-    <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
-    <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
-    <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+
+    <title>Alex | Developer</title>
+
+    <meta name="keywords" content="[frontendalex], [alex], skill" />
+
+    <meta name="description" content="Alex | Developer" />
 
     <link
       rel="stylesheet"
@@ -34,15 +24,12 @@
       src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
     ></script>
 
-    <!-- Todo: remove the below script once you finish your portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
-  <!-- Todo: read the following HTML Todos to create your stunning portfolio website -->
   <body>
     <div id="top"></div>
 
-    <!-- **** Hero Section **** -->
+
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
@@ -57,9 +44,7 @@
         </p>
       </div>
     </section>
-    <!-- /END Hero Section -->
 
-    <!-- **** About Section **** -->
     <section id="about">
       <div class="container">
         <h2 class="section-title load-hidden">About me</h2>
@@ -100,97 +85,30 @@ Ofcourse you can't be a Master at coding because there is always something that 
         </div>
       </div>
     </section>
-    <!-- /END About Section -->
 
-    <!-- **** Projects Section **** -->
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Projects</h2>
 
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
-                <div>
-                  <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
-                  See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/project.jpg"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
 
-          <!-- Notice: each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">DarkHosting™️</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+I created and own this website myself, It's a hosting company where you can rent game servers/vps/shared/dedicated servers.
+This site is currently being used and can be seen online.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://darkhosting.club/"
                 >
                   See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
                 </a>
               </div>
             </div>
@@ -214,177 +132,45 @@ Ofcourse you can't be a Master at coding because there is always something that 
               </div>
             </div>
           </div>
-          <!-- /END Project -->
 
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
-                <div>
-                  <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
-                  See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/project.jpg"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
+
+
         </div>
       </div>
     </section>
-    <!-- /END Projects Section -->
 
-    <!-- **** Contact Section **** -->  
+
+
     <section id="contact">
+      <div class="container">
         <h2 class="section-title">Contact</h2>
-    <h2>
-      <form>
-        <label for="fname">Name:</label><br />
-        <input
-          type="text"
-          id="fname"
-          name="fname"
-          placeholder="Alex"
-          maxlength="40"
-        /><br />
-        <label for="lname">Email:</label><br />
-        <input
-          type="text"
-          id="lname"
-          name="lname"
-          placeholder="alexdev@email.com"
-          maxlength="30"
-        /><br />
-        <label for="issue">Reason for Contacting Us</label><br />
-        <textarea
-          type="text"
-          id="issue"
-          name="issue"
-          style="height:100px; width:400px;"
-          placeholder="Reason for Contacting us (Max 500)"
-          maxlength="500"
-        ></textarea>
-        <p id="notice" class="alert"></p>
-        <p id="notice2" class="alert2"></p>
-        <button onclick="sendMessage()" class="cta-btn"> See Live </button>
+        <div class="contact-wrapper load-hidden">
+          <p class="contact-wrapper__text">Send us an email to frontendalexcf@gmail.com</p>
+          <a
+            rel="noreferrer"
+            target="_blank"
+            class="cta-btn cta-btn--resume"
+            href="mailto:frontendalexcf@gmail.com"
+            >Email Me</a
+          >
+        </div>
+      </div>
+    </section>
 
-      </form>
-  
-      <script>
-        function sendMessage() {
-          var request = new XMLHttpRequest();
-          var fname = document.getElementById("fname").value;
-          var lname = document.getElementById("lname").value;
-          var issue = document.getElementById("issue").value;
-  
-          if (fname !== "" && lname !== "" && issue !== "") {
-            document.getElementById("fname").value = "";
-            document.getElementById("lname").value = "";
-            document.getElementById("issue").value = "";
-  
-            request.open(
-              "POST",
-              "https://discord.com/api/webhooks/977711056094908437/LKwNXWyyaLnuMD7KEMhVuXozzN2h22TljqG3VDRcXGf4JKgxgw2V4ds_fGRjcTAAKGaE"
-            );
-  
-            request.setRequestHeader("Content-type", "application/json");
-  
-            var params = {
-              username: "Contact us Submisstions ",
-              content:
-                "**A User Has Submitted a form on FrontEnd Alex**\n**User Tag:** " +
-                fname +
-                "\n**ID:** " +
-                lname +
-                "\n**Submission:** " +
-                issue //test it now, i removed the value in this line it should work| Thanks
-            };
-  
-            request.send(JSON.stringify(params));
-  document.getElementById("notice2").innerHTML =
-                      "Thanks for providing Feedback! Your Feedback has been Recorded\nNo Personal Infomation Has been Tracked";
-                      document.getElementById("notice").value = "";
-            event.preventDefault();
-          } else {
-            event.preventDefault();
-        document.getElementById("notice").innerHTML =
-                      "All the Boxes Need to Be Filled In to Continue";//change this to whatever you want to use
-          }
-        }
-      </script>
-        </h2>
-
-    <!-- /END Contact Section -->
-    <!-- **** Footer Section **** -->
     <footer class="footer navbar-static-bottom">
       <div class="container">
         <a rel="noreferrer" href="#top" class="back-to-top">
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
-        <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-linkedin fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-github fa-inverse"></i>
-          </a>
-        </div>
 
-        <hr />
 
-        <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
-          © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobidev" target="_blank"
-            >Jacobo Martínez</a
-          >
-        </p>
+          © 2022 - Site made by 
+            Front End Alex
+          
+                </p>
 
     </footer>
-    <!-- /END Footer Section -->
 
     <script defer type="module" src="index.js"></script>
   </body>
